--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://coco-peter.github.io/portfolio_dokdoLanding",
+  "homepage": "https://coco-peter.github.io/dokdoLandingPage",
   "browserslist": {
     "production": [
       ">0.2%",
